--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@ng-bootstrap/ng-bootstrap": "^6.2.0",
     "bootstrap": "^4.6.1",
+    "firebase": "^7.0 || ^8.0",
     "rxjs": "~6.5.4",
+    "sweetalert2": "^11.4.17",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2",
-    "firebase": "^7.0 || ^8.0"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.13",
