implement fake api

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ng-bootstrap/ng-bootstrap": "^6.2.0",
     "bootstrap": "^4.6.1",
     "firebase": "^7.0 || ^8.0",
+    "ngx-spinner": "^9.0.2",
     "rxjs": "~6.5.4",
     "sweetalert2": "^11.4.17",
     "tslib": "^1.10.0",
